FIX: Navbar z-index issue

--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -8,6 +8,8 @@
   top: 0;
   width: 100%;
   transition: all 0.3s ease-out;
+  z-index: 3;
+  background-color: #fff;
 }
 .large {
   background-color: #fff;
